List recipe names and use Remote import paths
